--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aflaj",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wangjuns.github.io/aflaj",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -11,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "ethers": "^5.6.8",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -20,6 +22,8 @@
     "web3modal": "^1.9.7"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
